--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OracleConnection": "User Id=gsnet;Password=021005;Data Source=172.171.201.170:1521/ORCL;"
+    "OracleConnection": "User Id=rm557245;Password=021005;Data Source=oracle.fiap.com.br:1521/ORCL;"
   },
   "Logging": {
     "LogLevel": {
